--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mysql": "^2.18.1"
+    "http": "^0.0.1-security",
+    "mysql": "^2.18.1",
+    "socket.io": "^4.5.3"
   }
 }
